# wgpeer

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/wgpeer/: cli.py  config.py  keys.py  network.py  peers.py
src/wgpeer/templates/: client.conf.j2  server.conf.j2
tests/: test_config.py  test_keys.py  test_network.py  test_peers.py
