[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wgpeer"
dynamic = ["version"]
description = "Manage WireGuard peers on a Debian VPS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "segno>=1.6",
]

[project.scripts]
wgpeer = "wgpeer.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/wgpeer"]

[tool.hatch.build.targets.wheel.force-include]
"src/wgpeer/templates" = "wgpeer/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
